Fixed array code

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.14...3.22)
 
-project(AlgorithmTests LANGUAGES CXX)
+project(AlgorithmCollectionTests LANGUAGES CXX)
 
 # ---- Options ----
 
@@ -19,29 +19,29 @@ CPMAddPackage("gh:doctest/doctest@2.4.9")
 CPMAddPackage("gh:TheLartians/Format.cmake@1.7.3")
 
 if(TEST_INSTALLED_VERSION)
-  find_package(Algorithm REQUIRED)
+  find_package(AlgorithmCollection REQUIRED)
 else()
-  CPMAddPackage(NAME Algorithm SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
+  CPMAddPackage(NAME AlgorithmCollection SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
 endif()
 
 # ---- Create binary ----
 
 file(GLOB sources CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)
 add_executable(${PROJECT_NAME} ${sources})
-target_link_libraries(${PROJECT_NAME} doctest::doctest Algorithm::Algorithm)
+target_link_libraries(${PROJECT_NAME} doctest::doctest AlgorithmCollection::AlgorithmCollection)
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 20)
 
 # enable compiler warnings
 if(NOT TEST_INSTALLED_VERSION)
   if(CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID MATCHES "GNU")
-    target_compile_options(Algorithm INTERFACE -Wall -Wpedantic -Wextra -Werror)
+    target_compile_options(AlgorithmCollection INTERFACE -Wall -Wpedantic -Wextra -Werror)
   elseif(MSVC)
-    target_compile_options(Algorithm INTERFACE /W4 /WX)
+    target_compile_options(AlgorithmCollection INTERFACE /W4 /WX)
     target_compile_definitions(${PROJECT_NAME} INTERFACE DOCTEST_CONFIG_USE_STD_HEADERS)
   endif()
 endif()
 
-# ---- Add AlgorithmTests ----
+# ---- Add AlgorithmCollectionTests ----
 
 enable_testing()
 
@@ -55,6 +55,6 @@ doctest_discover_tests(${PROJECT_NAME})
 # ---- code coverage ----
 
 if(ENABLE_TEST_COVERAGE)
-  target_compile_options(Algorithm INTERFACE -O0 -g -fprofile-arcs -ftest-coverage)
-  target_link_options(Algorithm INTERFACE -fprofile-arcs -ftest-coverage)
+  target_compile_options(AlgorithmCollection INTERFACE -O0 -g -fprofile-arcs -ftest-coverage)
+  target_link_options(AlgorithmCollection INTERFACE -fprofile-arcs -ftest-coverage)
 endif()
