--- a/standalone/CMakeLists.txt
+++ b/standalone/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.14...3.22)
 
-project(AlgorithmStandalone LANGUAGES CXX)
+project(AlgorithmCollectionStandalone LANGUAGES CXX)
 
 # --- Import tools ----
 
@@ -16,7 +16,7 @@ CPMAddPackage(
   OPTIONS "CXXOPTS_BUILD_EXAMPLES NO" "CXXOPTS_BUILD_TESTS NO" "CXXOPTS_ENABLE_INSTALL YES"
 )
 
-CPMAddPackage(NAME Algorithm SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
+CPMAddPackage(NAME AlgorithmCollection SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
 
 # ---- Create standalone executable ----
 
@@ -24,6 +24,6 @@ file(GLOB sources CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)
 
 add_executable(${PROJECT_NAME} ${sources})
 
-set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 20 OUTPUT_NAME "Algorithm")
+set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 20 OUTPUT_NAME "AlgorithmCollection")
 
-target_link_libraries(${PROJECT_NAME} Algorithm::Algorithm cxxopts)
+target_link_libraries(${PROJECT_NAME} AlgorithmCollection::AlgorithmCollection cxxopts)
